d63274b fix(translations): sync translations from transifex (v30)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -1,37 +1,37 @@
 about=O...
-add_legend=Add legend
+add_legend=P\u0159idat legendu
 add_new=P\u0159idat nov\u00fd
-address=Address
-add_to_dashboard=Add to dashboard
+address=Adresa
+add_to_dashboard=P\u0159idat na hlavn\u00ed panel
 aggregation_type=Typ agregace
 allow_external_access=Povolit extern\u00ed p\u0159\u00edstup
-and_or_lower_than=And/or lower than
-attribution=Attribution
+and_or_lower_than=A / nebo ni\u017e\u0161\u00ed ne\u017e
+attribution=Uveden\u00ed zdroje
 automatic=Automatick\u00fd
 average=Pr\u016fm\u011br
 bimonthly=Dvakr\u00e1t za m\u011bs\u00edc
-boundary_layer=Boundary layer
+boundary_layer=vrstva hranic
 by_data_element=Podle datov\u00e9ho prvku
 cancel=Zru\u0161it
 can_edit_and_view=M\u016f\u017ee upravovat a prohl\u00ed\u017eet
 can_view=M\u016f\u017ee zobrazit
 chart=Sch\u00e9ma
-classes_method=Classes / method
+classes_method=T\u0159\u00eddy / metoda
 clear=Vy\u010distit
-clear_map=Clear map
-clustering=Clustering
+clear_map=Vy\u010distit mapu
+clustering=Shlukov\u00e1n\u00ed
 code=K\u00f3d
-color_scale=Color scale
+color_scale=Barevn\u00e1 stupnice
 coordinate_field=Pole sou\u0159adnic
-coordinates=Coordinates
-coordinates_could_not_be_loaded=Coordinates could not be loaded
+coordinates=Sou\u0159adnice
+coordinates_could_not_be_loaded=Sou\u0159adnice nelze na\u010d\u00edst
 count=Po\u010det
 create=Vytvo\u0159it
 created_by=Vytvo\u0159il
-current_legends=Current legends
+current_legends=Aktu\u00e1ln\u00ed legendy
 daily=Denn\u011b
 data=Data
-data_and_periods=Data and periods
+data_and_periods=Data a obdob\u00ed
 dataelement=Datov\u00fd prvek
 dataelement_group=Skupina datov\u00fdch prvk\u016f
 dataset=Datov\u00e1 sada
@@ -39,35 +39,35 @@ delete=Smazat
 delete_favorite=Smazat obl\u00edbenou polo\u017eku
 details=Detaily
 download=St\u00e1hnout
-download_map_as_png=Download map as PNG
+download_map_as_png=St\u00e1hnout mapu jako PNG
 drill_down_one_level=P\u0159ej\u00edt o jednu \u00farove\u0148 n\u00ed\u017ee
 drill_up_one_level=Jd\u011bte o jednu \u00farove\u0148 v\u00fd\u0161
 duplicate=Duplik\u00e1t
 earthengine_layer=Google Earth Engine
-earth_engine_layer_legend=Google Earth Engine legend
+earth_engine_layer_legend=Legenda Google Earth Engine
 elevation=Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
 edit_layer=Upravit vrstvu
-edit_legend=Edit legend
-email=Email
+edit_legend=Upravit legendu
+email=E-mail
 end_date=Datum ukon\u010den\u00ed
-end_value_should_be_bigger_than_start_value=End value should be bigger than start value
+end_value_should_be_bigger_than_start_value=Koncov\u00e1 hodnota by m\u011bla b\u00fdt v\u011bt\u0161\u00ed ne\u017e po\u010d\u00e1te\u010dn\u00ed hodnota
 equal_counts=Stejn\u00e9 po\u010dty
 equal_intervals=Stejn\u00e9 intervaly
 event_data_item=Datov\u00e1 polo\u017eka ud\u00e1losti
 event_data_items=Polo\u017eky dat ud\u00e1losti
-event_layer=Event layer
+event_layer=Vrstva ud\u00e1lost\u00ed
 event_location=M\u00edsto kon\u00e1n\u00ed akce
 event_time=\u010cas ud\u00e1losti
 external_layer=Vn\u011bj\u0161\u00ed vrstva
-external_layer_legend=External layer legend
-facility_layer=Facility layer
-facility_layer_export_currently_not_supported=Facility layer export currently not supported
-facility_layer_legend=Facility layer legend
-favorite_name=Favorite name
-favorite_outdated_create_new=Favorite is outdated - please create a new one
+external_layer_legend=Legenda extern\u00ed vrstvy
+facility_layer=Vrstva za\u0159\u00edzen\u00ed
+facility_layer_export_currently_not_supported=Export vrstvy za\u0159\u00edzen\u00ed nen\u00ed aktu\u00e1ln\u011b podporov\u00e1n
+facility_layer_legend=Legenda vrstvy za\u0159\u00edzen\u00ed
+favorite_name=Obl\u00edben\u00fd n\u00e1zev
+favorite_outdated_create_new=Obl\u00edben\u00e9 je zastaral\u00e9 - vytvo\u0159te pros\u00edm nov\u00fd
 favorites=Obl\u00edben\u00e9
 filter=Filtr
-filter_by_value=Filter by value
+filter_by_value=Filtrovat podle hodnoty
 financial_april=Finan\u010dn\u00ed rok (od dubna)
 financial_july=Finan\u010dn\u00ed rok (od \u010dervence)
 financial_oct=Finan\u010dn\u00ed rok (od \u0159\u00edjna)
@@ -75,21 +75,21 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=P\u0159ej\u00edt na grafy
 go_to_pivot_tables=P\u0159ej\u00edt na kontingen\u010dn\u00ed tabulky
-greater_than=Greater than
+greater_than=V\u011bt\u0161\u00ed ne\u017e
 group=Skupina
-group_nearby_events=Group nearby events
+group_nearby_events=Seskupit bl\u00edzk\u00e9 ud\u00e1losti
 groups=Skupiny
 groupset=Skupinov\u00e1 sada
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
-high_size=Velk\u00e1 velikost
+has_no_orgunits=nem\u00e1 \u017e\u00e1dn\u00e9 organiza\u010dn\u00ed jednotky
+high_color_size=Horn\u00ed barva / velikost
+highlight_color=Zv\u00fdraz\u0148ovac\u00ed barva
+high_size=Horn\u00ed velikost
 home=Domovsk\u00e1 strana
 indicator=Indik\u00e1tor
 indicator_group=Skupina indik\u00e1tor\u016f
-information=Information
-infrastructural_data=Infrastructural data
-invalid_parameter=Invalid parameter
+information=Informace
+infrastructural_data=Infrastrukturn\u00ed data
+invalid_parameter=Neplatn\u00fd parametr
 item_type=Typ polo\u017eky
 landcover=krajinn\u00e9 pokryt\u00ed
 last_2_sixmonths=Posledn\u00ed 2 \u0161estim\u011bs\u00edce
@@ -111,58 +111,58 @@ last_week=Minul\u00fd t\u00fdden
 last_5_years=Posledn\u00edch 5 let
 last_year=Posledn\u00ed rok
 latitude=Zem\u011bpisn\u00e1 \u0161\u00ed\u0159ka
-layer=Layer
-layers=Layers
-layer_stack_transparency=Layer stack / opacity
-legend_name=Legend name
-legend_name_is_required=Legend name is required
-legends=Legends
+layer=Vrstva
+layers=Vrstvy
+layer_stack_transparency=Z\u00e1sobn\u00edk vrstev / nepr\u016fhlednost
+legend_name=N\u00e1zev legendy
+legend_name_is_required=N\u00e1zev legendy je povinn\u00fd
+legends=Legendy
 legendset=Sada legend
-legend_sets_available=legend sets available
-legend_set_name=Legend set name
-legendsets=Legend sets
-legend_symbolizer=Symbolizer
+legend_sets_available=sady legendy k dispozici
+legend_set_name=N\u00e1zev sady legend
+legendsets=Sady legend
+legend_symbolizer=Symboliz\u00e1tor
 legend_type=Typ legendy
 level=\u00darove\u0148
 longitude=Zem\u011bpisn\u00e1 d\u00e9lka
-low_color_size=Low color / size
-low_size=Mal\u00e1 velikost
+low_color_size=Doln\u00ed barva / velikost
+low_size=Doln\u00ed velikost
 manage_favorites=Spravovat obl\u00edben\u00e9 polo\u017eky
 map=Mapa
 max=Max
 min=Min
 min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/max elevation
-min_max_people=Min/max people
-min_max_rainfall=Min/max rainfall
-min_max_value=Min/max value
+min_max_elevation=Min./max. Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
+min_max_people=Min./max. Osob
+min_max_rainfall=Min./max. Sr\u00e1\u017eky
+min_max_value=Min./max. Hodnota
 monthly=M\u011bs\u00ed\u010dn\u011b
 name=N\u00e1zev
 next=Dal\u0161\u00ed
 nighttime_lights=No\u010dn\u00ed sv\u011btla
 no=Ne
-no_groupset_selected=No group set selected
-no_map_to_save=No map to save
+no_groupset_selected=Nevybr\u00e1na \u017e\u00e1dn\u00e1 sada skupin
+no_map_to_save=\u017d\u00e1dn\u00e1 mapa k ulo\u017een\u00ed
 none=\u017d\u00e1dn\u00fd
-no_event_coordinates_found=No event coordinates found
-no_organisation_unit_levels=No organisation unit levels
-no_organisation_units_specified=No organisation units specified
+no_event_coordinates_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 sou\u0159adnice ud\u00e1losti
+no_organisation_unit_levels=\u017d\u00e1dn\u00e9 \u00farovn\u011b organiza\u010dn\u00ed jednotky
+no_organisation_units_specified=Nebyly zad\u00e1ny \u017e\u00e1dn\u00e9 organiza\u010dn\u00ed jednotky
 no_period_selected=Nen\u00ed vybr\u00e1no \u017e\u00e1dn\u00e9 obdob\u00ed
-no_program_stage_selected=No program stage selected
-no_selected_items=No selected items
-no_system_info_found=No system info found
-no_valid_coordinates_found=No valid coordinates found
+no_program_stage_selected=Nen\u00ed vybr\u00e1na \u017e\u00e1dn\u00e1 programov\u00e1 f\u00e1ze
+no_selected_items=Nevybran\u00e9 \u017e\u00e1dn\u00e9 polo\u017eky
+no_system_info_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 syst\u00e9mov\u00e9 informace
+no_valid_coordinates_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 platn\u00e9 sou\u0159adnice
 open_last_chart=Otev\u0159\u00edt posledn\u00ed graf
 open_last_table=Otev\u0159\u00edt posledn\u00ed tabulku
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Open this map as chart
-open_this_map_as_table=Open this map as table
+open_this_map_as_chart=Otev\u0159\u00edt tuto mapu jako graf
+open_this_map_as_table=Otev\u0159\u00edt tuto mapu jako tabulku
 options=Mo\u017enosti
 organisation_unit=Organiza\u010dn\u00ed jednotka
-organisation_unit_group_icons=Organisation unit group icons
-organisationunit_groupset=Organisation unit group set
+organisation_unit_group_icons=Ikony skupiny organiza\u010dn\u00edch jednotek
+organisationunit_groupset=Sada skupiny organiza\u010dn\u00edch jednotek
 organisation_units=Organiza\u010dn\u00ed jednotky
-organisationunit_search=Organisation unit search
+organisationunit_search=Hled\u00e1n\u00ed organiza\u010dn\u00ed jednotky
 osm_light=OSM Light
 overwrite=P\u0159epsat
 overwrite_favorite=P\u0159epsat obl\u00edben\u00e9
@@ -171,11 +171,11 @@ parent_unit=Nad\u0159azen\u00e1 jednotka
 period=Obdob\u00ed
 period_type=Typ obdob\u00ed
 phone_number=Telefonn\u00ed \u010d\u00edslo
-placement=Placement
-please_create_map_first=Please create a map first
-please_enter_a_name=Please enter a name
-please_enter_map_title=Please enter a map title
-point_color=Point color
+placement=Um\u00edst\u011bn\u00ed
+please_create_map_first=Nejprve vytvo\u0159te mapu
+please_enter_a_name=Zadejte pros\u00edm n\u00e1zev
+please_enter_map_title=Zadejte n\u00e1zev mapy
+point_color=Barva bodu
 point_radius=Polom\u011br bodu
 population_density=Hustota obyvatel
 precipitation=Sr\u00e1\u017eky
@@ -187,36 +187,36 @@ public_access=Ve\u0159ejn\u00fd p\u0159\u00edstup
 quarterly=\u010ctvrtletn\u011b
 relative=Relativn\u00ed
 relocate=P\u0159em\u00edstit
-relocate_facility=Relocate facility
+relocate_facility=P\u0159em\u00edstit za\u0159\u00edzen\u00ed
 remove=Odebrat
 rename=P\u0159ejmenovat
 reporting_rates=M\u00edry vykazov\u00e1n\u00ed
 revision=Revize
 search=Hledat
 search_for_favorites=Vyhledat obl\u00edben\u00e9 
-search_for_user_groups=Search for user groups
+search_for_user_groups=Vyhledat skupiny u\u017eivatel\u016f
 select=Vybrat
 select_groups=Vyberte skupiny
 selection_mode=Re\u017eim v\u00fdb\u011bru
-select_dataset=Select dataset
-select_layer=Select layer
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_dataset=Vybrat datovou sadu
+select_layer=Vybrat vrstvu
+select_layer_from_google_earth_engine=Vyberte vrstvu z Google Earth Engine
 select_levels=Vybrat \u00farovn\u011b
 select_organisation_unit_groups=Vybrat skupiny organiza\u010dn\u00edch jednotek
 select_organisation_unit_levels=Vybrat \u00farovn\u011b organiza\u010dn\u00ed jednotky
 select_organisation_units=Vybrat organiza\u010dn\u00ed jednotky
-select_period=Select period
+select_period=Vybrat obdob\u00ed
 select_program=Vybrat program
-select_service=Select service
-select_stage=Select stage
+select_service=Vybrat slu\u017ebu
+select_stage=Vybrat f\u00e1zi
 select_sub_units=Vybrat podjednotky
 select_year=Vybrat rok
-service_url=Service URL
+service_url=URL slu\u017eby
 share=Sd\u00edlet
-share_with_other_people=Share with others
+share_with_other_people=Sd\u00edlet s ostatn\u00edmi
 sharing_settings=Nastaven\u00ed sd\u00edlen\u00ed
 show=Zobrazit
-show_circular_area=Show circular area with radius (m)
+show_circular_area=Zobrazit kruhovou plochu s polom\u011brem (m)
 show_information_sheet=Zobrazit informace
 show_lon_lat=Zobrazit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
 sixmonthly=\u0160estim\u011bs\u00ed\u010dn\u00ed
@@ -224,23 +224,23 @@ sixmonthly_april=Duben \u0161est m\u011bs\u00edc\u016f
 stage=F\u00e1ze
 start_date=Datum za\u010d\u00e1tku
 start_end_dates=Datum zah\u00e1jen\u00ed / ukon\u010den\u00ed
-start_end_value=Start/end value
+start_end_value=Po\u010d\u00e1te\u010dn\u00ed / kone\u010dn\u00e1 hodnota
 stddev=Standardn\u00ed odchylka
 steps=Kroky
 style=Styl
-sub_units=Sub-units
-sub_x2_units=Sub-x2-units
+sub_units=Podjednotky
+sub_x2_units=Sub-x2 jednotky
 sum=Sou\u010det
 swap_lon_lat=Prohodit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
-symbol_layer=Facility layer
+symbol_layer=Vrstva za\u0159\u00edzen\u00ed
 table=Tabulka
 temperature=Teplota
-text_filter=Text filter
+text_filter=Textov\u00fd filtr
 thematic_layer=Tematick\u00e1 vrstva
-thematic_layer_1_legend=Thematic layer 1 legend
-thematic_layer_2_legend=Thematic layer 2 legend
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_1_legend=Legenda tematick\u00e9 vrstvy 1
+thematic_layer_2_legend=Legenda Tematick\u00e9 vrstvy 2
+thematic_layer_3_legend=Legenda Tematick\u00e9 vrstvy 3
+thematic_layer_4_legend=Legenda Tematick\u00e9 vrstvy 4
 this_bimonth=T\u011bchto 14 dn\u00ed
 this_financial_year=Tento fisk\u00e1ln\u00ed rok
 this_month=Tento m\u011bs\u00edc
@@ -248,14 +248,14 @@ this_quarter=Toto \u010dtvrtlet\u00ed
 this_sixmonth=Tento p\u016flrok
 this_week=Tento t\u00fdden
 this_year=Tento rok
-time_since_last_data_update=Elapsed time since last data update
+time_since_last_data_update=Uplynul\u00fd \u010das od posledn\u00ed aktualizace dat
 today=Dnes
 totals=Sou\u010dty
 update=Aktualizovat
 username=U\u017eivatelsk\u00e9 jm\u00e9no
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
-user_ou=User OU
+user_is_not_assigned_to_any_organisation_units=U\u017eivatel nen\u00ed p\u0159i\u0159azen k \u017e\u00e1dn\u00fdm organiza\u010dn\u00edm jednotk\u00e1m
+user_organisation_unit=Organiza\u010dn\u00ed jednotka u\u017eivatele
+user_ou=U\u017eivatel OJ
 user_sub_units=U\u017eivatelsk\u00e9 podjednotky
 user_sub_x2_units=U\u017eivatel pod\u0159azen\u00e9 x2 jednotky 
 value=Hodnota
@@ -268,10 +268,10 @@ weekly_thursday=T\u00fddn\u011b (od \u010dtvrtka)
 weekly_saturday=T\u00fddn\u011b (od soboty)
 weekly_sunday=T\u00fddn\u011b (za\u010d\u00e1n\u00e1 ned\u011bl\u00ed)
 write_interpretation=Napi\u0161te interpretaci
-write_your_interpretation=Write your interpretation
+write_your_interpretation=Napi\u0161te svou interpretaci
 yearly=Ro\u010dn\u011b
 yes=Ano
 yesterday=V\u010dera
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_can_not_select_organisation_units_below_the_selected_level=Pod vybranou \u00farovn\u00ed nem\u016f\u017eete vybrat organiza\u010dn\u00ed jednotky
 you_do_not_have_access_to_all_items_in_this_favorite=Nem\u00e1te p\u0159\u00edstup ke v\u0161em polo\u017ek\u00e1m v t\u00e9to obl\u00edben\u00e9 polo\u017ece
 
