501d533 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -263,10 +263,10 @@ value_type=Ki\u1ec3u gi\u00e1 tr\u1ecb
 variance=Ph\u01b0\u01a1ng sai
 version=Phi\u00ean b\u1ea3n
 weekly=H\u00e0ng Tu\u1ea7n
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 T\u01b0)
+weekly_thursday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 N\u0103m)
+weekly_saturday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 B\u1ea3y)
+weekly_sunday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Ch\u1ee7 nh\u1eadt)
 write_interpretation=Vi\u1ebft Di\u1ec5n Gi\u1ea3i
 write_your_interpretation=Vi\u1ebft Di\u1ec5n Gi\u1ea3i c\u1ee7a b\u1ea1n
 yearly=H\u00e0ng N\u0103m
