--- a/i18n/i18n_app_uk.properties
+++ b/i18n/i18n_app_uk.properties
@@ -48,7 +48,7 @@ earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
-email=Email
+email=\u0415\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430 \u043f\u043e\u0448\u0442\u0430
 end_date=\u041a\u0456\u043d\u0446\u0435\u0432\u0430 \u0434\u0430\u0442\u0430
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
