ea629b4 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -57,7 +57,7 @@ event_data_item=Data item pada even
 event_data_items=Item data event
 event_layer=Event layer
 event_location=Lokasi even
-event_time=Event time
+event_time=Waktu even
 external_layer=External layer
 external_layer_legend=External layer legend
 facility_layer=Facility layer
@@ -90,7 +90,7 @@ indicator_group=group indikator
 information=Informasi
 infrastructural_data=Data infrastruktur
 invalid_parameter=Invalid parameter
-item_type=Item type
+item_type=Tipe item
 landcover=Landcover
 last_2_sixmonths=2 semester terakhir
 last_3_months=3 bulan terakhir
@@ -176,7 +176,7 @@ please_create_map_first=Silakan buat peta terlebih dahulu
 please_enter_a_name=Please enter a name
 please_enter_map_title=Silakan menuliskan judul peta
 point_color=Point color
-point_radius=Point radius
+point_radius=Radius titik
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
