66a6b1a fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -3,17 +3,17 @@ add_legend=Add legend
 add_new=Add new
 address=Address
 add_to_dashboard=Add to dashboard
-aggregation_type=Aggregation type
+aggregation_type=Aggregatietype
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automatic
+automatic=Automatisch
 average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
-can_edit_and_view=Can edit and view
+cancel=Annuleer
+can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
@@ -22,19 +22,19 @@ clear_map=Clear map
 clustering=Clustering
 code=Code
 color_scale=Color scale
-coordinate_field=Coordinate field
+coordinate_field=Co\u00f6rdinatenveld
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
 create=Create
-created_by=Created by
+created_by=Gecre\u00eberd door
 current_legends=Current legends
 daily=Daily
-data=Data
+data=Gegevens
 data_and_periods=Data and periods
 dataelement=informatie onderdeel
-dataelement_group=Data element group
-dataset=Data set
+dataelement_group=Gegevenselementengroep
+dataset=Gegevensreeks
 delete=Verwijderen
 delete_favorite=Delete favorite
 details=Details
@@ -46,19 +46,19 @@ duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
-edit_layer=Edit layer
+edit_layer=Bewerk laag
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=Einddatum
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
-event_data_item=Event data item
-event_data_items=Event data items
+event_data_item=Gebeurtenisgegevensitem
+event_data_items=Gebeurtenisgegevensitems
 event_layer=Event layer
-event_location=Event location
-event_time=Event time
-external_layer=External layer
+event_location=Gebeurtenislocatie
+event_time=Tijd van gebeurtenis
+external_layer=Externe laag
 external_layer_legend=External layer legend
 facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
@@ -78,19 +78,19 @@ go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
 group=Group
 group_nearby_events=Group nearby events
-groups=Groups
-groupset=Group set
+groups=Groepen
+groupset=Groepsreeks
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
-high_size=High size
+high_size=Hoge maat
 home=Home
 indicator=Indicator
-indicator_group=Indicator group
+indicator_group=Indicatorgroep
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
-item_type=Item type
+item_type=Itemsoort
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
 last_3_months=Last 3 months
@@ -117,16 +117,16 @@ layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
 legends=Legends
-legendset=Legend set
+legendset=Legendereeks
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=Niveau
 longitude=Longitude
 low_color_size=Low color / size
-low_size=Low size
+low_size=Lage maat
 manage_favorites=Manage favorites
 map=Map
 max=Max
@@ -137,13 +137,13 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Monthly
-name=Name
+name=Naam
 next=Next
 nighttime_lights=Nighttime lights
-no=No
+no=Nee
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=None
+none=Geen
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -157,11 +157,11 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
-organisation_unit=Organisation unit
+options=Opties
+organisation_unit=Organisatie\u00ebenheid
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units=Organisatie\u00ebenheden
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
@@ -169,24 +169,24 @@ overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
 period=Periode
-period_type=Period type
+period_type=Soort periode
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
 please_enter_map_title=Please enter a map title
 point_color=Point color
-point_radius=Point radius
+point_radius=Puntradius
 population_density=Population density
 precipitation=Precipitation
-predefined=Predefined
+predefined=Voorgedefinieerd
 previous=Previous
-program=Program
-program_indicators=Program indicators
-public_access=Public access
+program=Programma
+program_indicators=Programmaindicators
+public_access=Publieke toegang
 quarterly=Quarterly
-relative=Relative
-relocate=Relocate
+relative=Relatief
+relocate=Verplaats
 relocate_facility=Relocate facility
 remove=Remove
 rename=Rename
@@ -196,12 +196,12 @@ search=Search
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
 select=Selecteer
-select_groups=Select groups
-selection_mode=Selection mode
+select_groups=Selecteer groepen
+selection_mode=Selectiemodus
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
-select_levels=Select levels
+select_levels=Selecteur niveaus
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
@@ -214,24 +214,24 @@ select_year=Select year
 service_url=Service URL
 share=Share
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=Instellingen voor delen
 show=Show
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
-show_lon_lat=Show longitude/latitude
+show_information_sheet=Toon informatie
+show_lon_lat=Toon lengtegraad/breedtegraad
 sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
-stage=Stage
-start_date=Start date
+stage=Stadium
+start_date=Startdatum
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
-steps=Steps
-style=Style
+steps=Stappen
+style=Stijl
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Sum
-swap_lon_lat=Swap longitude/latitude
+swap_lon_lat=Wissel lengtegraad/breedtegraad
 symbol_layer=Facility layer
 table=Table
 temperature=Temperature
@@ -250,7 +250,7 @@ this_week=This week
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
 today=Today
-totals=Totals
+totals=Totalen
 update=Bijwerken
 username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
@@ -258,7 +258,7 @@ user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
-value=Value
+value=Waarde
 value_type=Value type
 variance=Variance
 version=Version
@@ -270,7 +270,7 @@ weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Yearly
-yes=Yes
+yes=Ja
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
