06b3461 fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -1,17 +1,17 @@
 about=About
 add_legend=Add legend
 add_new=Add new
-address=Address
+address=Adres
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregatietype
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatisch
-average=Average
-bimonthly=Bi-monthly
+average=Gemiddelde
+bimonthly=Tweemaandelijks
 boundary_layer=Boundary layer
-by_data_element=By data element
+by_data_element=Volgens gegevenselement
 cancel=Annuleer
 can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
@@ -25,11 +25,11 @@ color_scale=Color scale
 coordinate_field=Co\u00f6rdinatenveld
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
+count=Tel
 create=Create
 created_by=Gecre\u00eberd door
 current_legends=Current legends
-daily=Daily
+daily=Dagelijks
 data=Gegevens
 data_and_periods=Data and periods
 dataelement=informatie onderdeel
@@ -45,10 +45,10 @@ drill_up_one_level=Drill up one level
 duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
+elevation=Hoogte
 edit_layer=Bewerk laag
 edit_legend=Edit legend
-email=Email
+email=Emailadres
 end_date=Einddatum
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
@@ -68,15 +68,15 @@ favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=Favorites
 filter=Filter
 filter_by_value=Filter by value
-financial_april=Financial year (Start April)
-financial_july=Financial year (Start July)
-financial_oct=Financial year (Start October)
+financial_april=Financieel jaar (Start april)
+financial_july=Financieel jaar (Start juli)
+financial_oct=Financieel jaar (Start oktober)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=Groep
 group_nearby_events=Group nearby events
 groups=Groepen
 groupset=Groepsreeks
@@ -91,7 +91,7 @@ information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Itemsoort
-landcover=Landcover
+landcover=Landbedekking
 last_2_sixmonths=Last 2 six-months
 last_3_months=Last 3 months
 last_4_quarters=Last 4 quarters
@@ -110,7 +110,7 @@ last_sixmonth=Last six-month
 last_week=Last week
 last_5_years=Last 5 years
 last_year=Last year
-latitude=Latitude
+latitude=Breedtegraad
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -124,7 +124,7 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Niveau
-longitude=Longitude
+longitude=Lengtegraad
 low_color_size=Low color / size
 low_size=Lage maat
 manage_favorites=Manage favorites
@@ -136,7 +136,7 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=Maandelijks
 name=Naam
 next=Next
 nighttime_lights=Nighttime lights
@@ -178,7 +178,7 @@ please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Puntradius
 population_density=Population density
-precipitation=Precipitation
+precipitation=Neerslag
 predefined=Voorgedefinieerd
 previous=Previous
 program=Programma
@@ -188,7 +188,7 @@ quarterly=Quarterly
 relative=Relatief
 relocate=Verplaats
 relocate_facility=Relocate facility
-remove=Remove
+remove=Verwijderen
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
@@ -223,20 +223,20 @@ sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
 stage=Stadium
 start_date=Startdatum
-start_end_dates=Start/end dates
+start_end_dates=Start-/einddatums
 start_end_value=Start/end value
-stddev=Standard deviation
+stddev=Standaarddeviatie
 steps=Stappen
 style=Stijl
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Sum
+sum=Som
 swap_lon_lat=Wissel lengtegraad/breedtegraad
 symbol_layer=Facility layer
 table=Table
-temperature=Temperature
+temperature=Temperatuur
 text_filter=Text filter
-thematic_layer=Thematic layer
+thematic_layer=Thematische laag
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
@@ -249,7 +249,7 @@ this_sixmonth=This six-month
 this_week=This week
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=Vandaag
 totals=Totalen
 update=Bijwerken
 username=Username
@@ -260,18 +260,18 @@ user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=Waarde
 value_type=Value type
-variance=Variance
+variance=Variantie
 version=Version
-weekly=Weekly
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly=Wekelijks
+weekly_wednesday=Wekelijks (Start op woensdag)
+weekly_thursday=Wekelijks (Start op donderdag)
+weekly_saturday=Wekelijks (Start op zaterdag)
+weekly_sunday=Wekelijks (Start op zondag)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
+yearly=Jaarlijks
 yes=Ja
-yesterday=Yesterday
+yesterday=Gisteren
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
