d35296d fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -92,24 +92,24 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Itemsoort
 landcover=Landbedekking
-last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
-last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
-last_5_financial_years=Last 5 financial years
+last_2_sixmonths=Laatste 2 halfjaren
+last_3_months=Laatste 3 maanden
+last_4_quarters=Laatste 4 kwartieren
+last_4_weeks=Laatste 4 weken
+last_5_financial_years=Laatste 5 financi\u00eble jaren
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
-last_52_weeks=Last 52 weeks
+last_6_months=Laatste 6 maanden
+last_12_months=Laatste 12 maanden
+last_12_weeks=Laatste 12 weken
+last_52_weeks=Laatste 52 weken
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
-last_5_years=Last 5 years
-last_year=Last year
+last_financial_year=Laatste financieel jaar
+last_month=Laatste maand
+last_quarter=Laatste kwartier
+last_sixmonth=Laatste halfjaar
+last_week=Laatste week
+last_5_years=Laatste 5 jaren
+last_year=Laatste jaar
 latitude=Breedtegraad
 layer=Layer
 layers=Layers
@@ -242,17 +242,17 @@ thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
-this_financial_year=This financial year
-this_month=This month
-this_quarter=This quarter
-this_sixmonth=This six-month
-this_week=This week
-this_year=This year
+this_financial_year=Dit financieel jaar
+this_month=Deze maand
+this_quarter=Dit kwartier
+this_sixmonth=Dit halfjaar
+this_week=Deze week
+this_year=Dit jaar
 time_since_last_data_update=Elapsed time since last data update
 today=Vandaag
 totals=Totalen
 update=Bijwerken
-username=Username
+username=Gebruikersnaam
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
@@ -261,7 +261,7 @@ user_sub_x2_units=User sub-x2-units
 value=Waarde
 value_type=Value type
 variance=Variantie
-version=Version
+version=Versie
 weekly=Wekelijks
 weekly_wednesday=Wekelijks (Start op woensdag)
 weekly_thursday=Wekelijks (Start op donderdag)
