6a0b22f fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_ro.properties
+++ b/i18n/i18n_app_ro.properties
@@ -35,9 +35,9 @@ data_and_periods=Data and periods
 dataelement=Data element
 dataelement_group=Data element group
 dataset=Data set
-delete=Delete
+delete=Lichidare
 delete_favorite=Delete favorite
-details=\u0b2c\u0b3f\u0b2c\u0b30\u0b23\u0b40
+details=Details
 download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
@@ -93,7 +93,7 @@ invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=Ultimele 3 luni
 last_4_quarters=Last 4 quarters
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
@@ -104,10 +104,10 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=\u0b17\u0b24 \u0b2e\u0b3e\u0b38
+last_month=Luna trecut\u0103
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=\u0b17\u0b24 \u0b38\u0b2a\u0b4d\u0b24\u0b3e\u0b39
+last_week=S\u0103pt\u0103m\u00e2na trecut\u0103
 last_5_years=Last 5 years
 last_year=Last year
 latitude=Latitude
@@ -136,11 +136,11 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=\u0b2e\u0b3e\u0b38\u0b3f\u0b15
+monthly=Monthly
 name=Name
 next=Next
 nighttime_lights=Nighttime lights
-no=\u0b28\u0b3e\u0b39\u0b3f\u0b01
+no=Nu
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
 none=None
@@ -158,7 +158,7 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=Unitate organiza\u021bional\u0103
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
 organisation_units=Organisation units
@@ -192,7 +192,7 @@ remove=Remove
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=Search
+search=C\u0103utare
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
 select=Select
@@ -243,15 +243,15 @@ thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
 this_financial_year=This financial year
-this_month=\u0b1a\u0b33\u0b3f\u0b24 \u0b2e\u0b3e\u0b38
+this_month=Luna aceasta
 this_quarter=This quarter
 this_sixmonth=This six-month
-this_week=\u0b1a\u0b33\u0b3f\u0b24 \u0b38\u0b2a\u0b4d\u0b24\u0b3e\u0b39
+this_week=S\u0103pt\u0103m\u00e2na aceasta
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=\u0b06\u0b1c\u0b3f
+today=Ast\u0103zi
 totals=Totals
-update=Update
+update=Actualizare
 username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
@@ -262,16 +262,16 @@ value=Value
 value_type=Value type
 variance=Variance
 version=Version
-weekly=\u0b38\u0b3e\u0b2a\u0b4d\u0b24\u0b3e\u0b39\u0b3f\u0b15
+weekly=Weekly
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=\u0b2c\u0b3e\u0b30\u0b4d\u0b37\u0b3f\u0b15
-yes=\u0b39\u0b01
-yesterday=\u0b17\u0b24\u0b15\u0b3e\u0b32\u0b3f
+yearly=Yearly
+yes=Da
+yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
